--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Flow Bench",
   "main": "index.js",
   "directories": {
-    "test": "node test/flow"
+    "test": "tape test/flow test/verify"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
