--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/pgte/flowbench",
   "dependencies": {
     "async": "^0.9.0",
+    "deep-equal": "^1.0.0",
     "ejs": "^2.3.1",
     "inherits": "^2.0.1",
     "node-uuid": "^1.4.3",
