--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "^2.2.0",
     "deep-equal": "^1.0.0",
     "ejs": "^2.3.1",
+    "humanize-duration": "^2.8.0",
     "inherits": "^2.0.1",
     "measured": "^1.0.0",
     "node-uuid": "^1.4.3",
