--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Flow Bench",
   "main": "index.js",
   "scripts": {
-    "test": "WAIT_BEFORE_STATS_MS=1 tape test/*.js"
+    "test": "WAIT_BEFORE_STATS_MS=1 tape test/*.js && npm run jshint",
+    "jshint": "jshint *.js lib/*.js test/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "xtend": "^4.0.0"
   },
   "devDependencies": {
+    "jshint": "^2.7.0",
     "nock": "^2.0.1",
     "tape": "^4.0.0"
   }
