--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^2.2.0",
     "deep-equal": "^1.0.0",
     "ejs": "^2.3.1",
+    "human-interval": "^0.1.4",
     "humanize-duration": "^2.8.0",
     "inherits": "^2.0.1",
     "measured": "^1.0.0",
@@ -35,5 +36,7 @@
     "pre-commit": "^1.0.7",
     "tape": "^4.0.0"
   },
-  "pre-commit": ["test"]
+  "pre-commit": [
+    "test"
+  ]
 }
