--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "human-interval": "^0.1.4",
     "humanize-duration": "^2.8.0",
     "inherits": "^2.0.1",
+    "isstream": "^0.1.2",
     "measured": "^1.0.0",
     "node-uuid": "^1.4.3",
     "request": "^2.55.0",
