--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "measured": "^1.0.0",
     "node-uuid": "^1.4.3",
     "request": "^2.55.0",
+    "toobusy-js": "^0.4.2",
     "xtend": "^4.0.0"
   },
   "devDependencies": {
